      branch to be symmetric with ``bzr commit --local``.
      (John Arbash Meinel, #93412)

    * Don't ask for a password if there is no real terminal.
      (Alexander Belchenko, #69851)

    * Implement handling of basename parameter for DefaultMail.  (James Westby)

    * Launchpad locations (lp: URLs) can be pulled.  (Aaron Bentley, #181945)

    * vsftp's return ``550 RNFR command failed.`` supported.
      (Marcus Trautwig, #129786)

  DOCUMENTATION:

    * Improved documentation on send/merge relationship. (Peter Schuller)

    * Minor fixes to the User Guide. (Matthew Fuller)

    * Reduced the evangelism in the User Guide. (Ian Clatworthy)

  API BREAKS:

    * Attempting to pull data from a ghost aware repository (e.g. knits) into a
      non-ghost aware repository such as weaves will now fail if there are
      ghosts.  (Robert Collins)

    * Log formatters must now provide log_revision instead of show and
      show_merge_revno methods. The latter had been deprecated since the 0.17
      release. (James Westby)

    * ``Repository.get_revision_graph`` is deprecated, with no replacement
      method. The method was size(history) and not desirable. (Robert Collins)

    * ``revision.revision_graph`` is deprecated, with no replacement function.
      The function was size(history) and not desirable. (Robert Collins)

    * ``Transport.get_shared_medium`` is deprecated.  Use
      ``Transport.get_smart_medium`` instead.  (Andrew Bennetts)

    * ``VersionedFile.create_empty`` is removed. This method presupposed a
      sensible mapping to a transport for individual files, but pack backed
      versioned files have no such mapping. (Robert Collins)

    * ``VersionedFile.get_graph`` is deprecated, with no replacement method.
      The method was size(history) and not desirable. (Robert Collins)

    * ``VersionedFile.get_graph_with_ghosts`` is deprecated, with no
      replacement method.  The method was size(history) and not desirable.